--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -16,3 +16,11 @@ $gutter--horizontal: 6rem;
 
 // FONT
 $default-font-size: 1.6rem;
+
+// BACKGROUND
+
+$background-image-1: linear-gradient(
+                        rgba($color-primary-light, 0.8), 
+                        rgba($color-primary-dark, 0.8)),
+                        url(../img/hero.jpg);
+
