--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,6 @@
 .header {
     height: 95vh;
-    background-image: linear-gradient(
-                    rgba($color-primary-light, 0.8), 
-                    rgba($color-primary-dark, 0.8)),
-                      url(../img/hero.jpg);
+    background-image: $background-image-1;
     background-size: cover;
     background-position: top;
     position: relative;
@@ -25,5 +22,19 @@
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
+    }
+}
+
+.heading-secondary {
+    @include background-styled-text;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing:  2px;
+    transition: all .2s;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     }
 }
