--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,19 +4,15 @@
     margin-top: -20vh;
 }
 
-.heading-secondary {
-    font-size: 3.5rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    display: inline-block;
-    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-    -webkit-background-clip: text;
-    color: transparent;
-    letter-spacing:  2px;
-    transition: all .2s;
+.section-features {
+    padding: 20rem 0;
+    background-image: $background-image-1;
+    background-size: cover;
+    margin-top: -10rem;
 
-    &:hover {
-        transform: skewY(2deg) skewX(15deg) scale(1.1);
-        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    transform: skewY(-7deg);
+
+    & > * {
+        transform: skewY(7deg);
     }
 }
