--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,10 @@ body {
   padding: 25rem 0 15rem 0;
   margin-top: -20vh; }
 
+.section-stories {
+  position: relative;
+  padding: 15rem 0; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -330,6 +334,68 @@ body {
     margin-top: 1rem;
     font-size: 6rem;
     font-weight: 100; }
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  padding: 3rem 7.5rem;
+  font-size: 1.6rem;
+  transform: skew(-12deg); }
+  .story__shape {
+    overflow: hidden;
+    position: relative;
+    margin: 0 auto;
+    width: 18rem;
+    height: 18rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skew(12deg) translateY(1rem); }
+  .story__img {
+    transform: skew(12deg) translateX(-4rem) scale(1.4);
+    height: 100%;
+    backface-visibility: hidden;
+    transition: all .5s;
+    background-size: cover; }
+  .story__text {
+    transform: translateX(2rem) skew(12deg) translateY(1rem); }
+  .story__caption {
+    position: absolute;
+    color: #fff;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    opacity: 0;
+    transition: all .5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: skew(12deg) translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
 
 .header {
   height: 95vh;
