--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,9 +1,9 @@
-.u-center-text { text-align: center; }
+.u-center-text { text-align: center !important; }
 
-.u-margin-bottom-bigger { margin-bottom: 10rem;}
-.u-margin-bottom-big { margin-bottom: 8rem;}
-.u-margin-bottom-medium { margin-bottom: 8rem;}
-.u-margin-bottom-small { margin-bottom: 1.5rem;}
+.u-margin-bottom-bigger { margin-bottom: 10rem !important;}
+.u-margin-bottom-big { margin-bottom: 8rem !important;}
+.u-margin-bottom-medium { margin-bottom: 5.5rem !important;}
+.u-margin-bottom-small { margin-bottom: 1.5rem !important;}
 
-.u-margin-top-bigger { margin-top: 10.5rem;}
-.u-margin-top-big { margin-top: 8rem;}
+.u-margin-top-bigger { margin-top: 10.5rem !important;}
+.u-margin-top-big { margin-top: 8rem !important;}
